--- a/.github/workflows/report.yaml
+++ b/.github/workflows/report.yaml
@@ -31,3 +31,8 @@ jobs:
         user_id: ${{ secrets.USER_ID2 }}
         password: ${{ secrets.PASSWORD2 }}
       run: "python -u main.py"
+    - name: Report
+      env:
+        user_id: ${{ secrets.USER_ID3 }}
+        password: ${{ secrets.PASSWORD3 }}
+      run: "python -u main.py"
